working on spacing issue in whatWeDo tiles on heroku

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -38,13 +38,14 @@ body{
 }
 
 .whatWeDoItem{
+    border: 1px solid black;
     text-align: center;
     width: 300px;
     height: 100%;
     /* border: 1px solid black; */
     margin: 10px;
     padding: 30px;
-    letter-spacing: 2px;
+    /* letter-spacing: 2px; */
     font-size: 20px;
 }
 
